janack-overflow/src/main/java/com/example/janackoverflow/error/domain/response/InputAccountResponseDTO.java
package com.example.janackoverflow.error.domain.response;

public class InputAccountResponseDTO {
}
